# hm5

./: .gitignore  README.md  app.py  config.py  pyproject.toml  requirements.txt
pipeline/: __init__.py  base_handler.py  categorical_handler.py  date_handler.py  pipeline_factory.py  salary_handler.py  text_handler.py
src/encoding/: encoders.py
src/io/: readers.py  writers.py
src/pipeline/: base.py  builder.py  handlers.py  pipeline.py
