[project]
name = "hh-chain-pipeline-npy"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = ["pandas>=2.0.0", "numpy>=1.24.0"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]
